// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package item;

service ItemApi {
    rpc GetItem (Id) returns (Item) {}
    rpc GetItems (Empty) returns (stream Item) {}
    rpc AddItem (Item) returns (Id) {}
    rpc DeleteItem (Id) returns (Id) {}
    rpc UpdateItem (Item) returns (Id) {}
}

message Item {
    string id = 1;
    string name = 2;
    string brand = 3;
    float price = 4;
}

message Id {
    string id = 1;
}

message Empty {

}
